--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "uber-clone",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
-    "@reduxjs/toolkit": "^1.6.1",
-    "expo": "~42.0.1",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-dotenv": "^3.2.0",
-    "react-native-elements": "^3.4.2",
-    "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-maps": "^0.29.3",
-    "react-native-maps-directions": "^1.8.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.4",
-    "tailwind-react-native-classnames": "^1.4.3"
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "expo": "~52.0.18",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-elements": "^3.4.3",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "1.18.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13",
+    "react-redux": "^9.1.2",
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
